cabal-version:      3.0
name:               echs
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Lykd
maintainer:         lykd@pm.me
build-type:         Simple

executable echs
    ghc-options: -Wall
    main-is:          Main.hs
    other-modules: SHA256
    build-depends:    base ^>=4.18.3.0, random, bytestring
    hs-source-dirs:   .
    default-language: Haskell2010
